--- a/index.html
+++ b/index.html
@@ -5,27 +5,22 @@
 	<meta charset="utf-8">
 
 	<!-- Normalize CSS -->
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="museu/css/normalize.css">
 
 	<!-- Estilo customizado -->
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
-
-	<!--[if lt IE 9]>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
-	<![endif]-->
-
+	<link rel="stylesheet" type="text/css" href="museu/css/estilo.css">
 
 </head>
 <body>
 
-	<div id="container"><!-- Início container -->
+	<div id="container">
 		
-		<header><!-- Início header -->
+		<header>
 			<div id="logo">
 				<h1><a href="">Museu Nacional</a></h1>
 			</div>
 
-			<nav><!-- Início nav -->
+			<nav>
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Exposições</a></li>
@@ -35,9 +30,9 @@
 			        <li><a href="#">fotos</a></li>
 			        <li><a href="#">contato</a></li>
 				</ul>
-			</nav><!--/fim nav -->
+			</nav>
 
-		</header><!--/fim header -->
+		</header>
 
 	<div id="principal">
 		
@@ -144,7 +139,7 @@
 	
 	</div>
 
-	</div><!--/fim container -->
+	</div>
 
 </body>
 </html>
