--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 		
 		<aside>
 			<section id="depoimento">
-				<img src="img/depoimento.png" alt="">
-
+				<img src="museu/img/depoimento.png" alt="">
+	
 			</section>
 
 			<section id="visita">
@@ -114,19 +114,19 @@
 			<section id="galeria">
 				<h4>Galeria de fotos</h4>
                <a href="">
-				   <img src="img/imagem1.jpg" alt="Descricao imagem" height="93" width="93">
+				   <img src="museu/img/imagem1.jpg" alt="Descricao imagem" height="93" width="93">
 			   </a>
 
 				<a href="">
-					<img src="img/imagem2.jpg" alt="">
+					<img src="museu/img/imagem2.jpg" alt="">
 				</a>
 
 				<a href="">
-					<img src="img/imagem3.jpg" alt="">
+					<img src="museu/img/imagem3.jpg" alt="">
 				</a>
 
 				<a href="">
-					<img src="img/imagem4.jpg" alt="">
+					<img src="museu/img/imagem4.jpg" alt="">
 				</a>
 
 			</section>
